{
  "version": 4,
  "terraform_version": "0.12.14",
  "serial": 15,
  "lineage": "a2a7ddd2-04c2-ff7c-332e-bf05e6daf252",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:162562915503:loadbalancer/brb-terraform-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "brb-terraform-elb-1480352973.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "brb-terraform-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0de47da924ea5ad50"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "brb-terraform-elb",
            "security_groups": [
              "sg-0ebede41c0cc265ef"
            ],
            "source_security_group": "162562915503/brb-terraform-elb",
            "source_security_group_id": "sg-0ebede41c0cc265ef",
            "subnets": [
              "subnet-58387e22",
              "subnet-a07bd5ec",
              "subnet-b04e46d8"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.elb",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162562915503:security-group/sg-0ebede41c0cc265ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebede41c0cc265ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "brb-terraform-elb",
            "name_prefix": null,
            "owner_id": "162562915503",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-7546a71e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162562915503:security-group/sg-06e74350f6d00d436",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06e74350f6d00d436",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "brb-terraform-elbs",
            "name_prefix": null,
            "owner_id": "162562915503",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-7546a71e"
          }
        }
      ]
    }
  ]
}